# pikachu_programing-techniques_final-project

./: CMakeLists.txt  Console.cpp  Console.h  Diffmode.cpp  Diffmode.h  Diffmodecheck.cpp  Diffmodecheck.h  Main.cpp  Menu.cpp  Menu.h  Normal.cpp  Normal.h  NormalCheck.cpp  NormalCheck.h  Struct.cpp  Struct.h  testkey.cpp
